# vrclipboard-ime

./: Cargo.toml  LICENSE  config.yaml
src/: config.rs  conversion.rs  handler.rs  main.rs
src/converter/: calculator.rs  converter.rs  hiragana.rs  mod.rs  none_converter.rs  roman_to_kanji.rs
