[package]
name = "vrclipboard-ime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clipboard = "0.5.0"
clipboard-master = "3.1.3"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
calc = { version = "*", default-features = false }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_Com",
    "Win32_UI_Input_Ime"
]
